made experiment the front page, etc minor

--- a/community/davidyen.htm
+++ b/community/davidyen.htm
@@ -187,7 +187,8 @@
 					<span class="bio">
 						<h2 class="inline">David Yen</h2>
 						<span class="byline">BFA in Industrial Design, Senior</span>
-						<a href="http://jedmund.com/">www.halfconscious.com</a>
+						<a href="http://halfconscious.com/">www.halfconscious.com</a>
+						David is a product and interaction designer at CMU. He loves technology and enjoy making simple products that provide real value to people. He also like fish tacos, biking, and making things with my amazing girlfriend. He'll be graduating in May and moving to San Francisco to work at Google! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</span>
 											
 					<p class="content"></p>
