--- a/apply/index.htm
+++ b/apply/index.htm
@@ -203,7 +203,7 @@
 				<div id="push"></div>
 		</div><!-- end content wrapper -->
 		
-		<footer>
+		<footer class="bumper">
 			<div class="container_12">			
 				
 				<div class="grid_3" id="contact_us">
