--- a/community/jedmund.htm
+++ b/community/jedmund.htm
@@ -193,6 +193,10 @@
 			
 					<p class="content">Justin Edmund is a designer and developer graduating from the the Carnegie-Mellon University School of Design in Pittsburgh, Pennsylvania. He specializes in product and interaction design, and is interested in social information and how it can be used to educate users about the passive and hidden details of their everyday life.</p>
 					<p class="content">He strives to use human-driven design and social media as a platform for cultural research, and one day hopes to change the world with design.</p>
+					<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+					Other links<br>
+					<a href="http://twitter.com/jedmund" class="orange">Twitter</a><br>
+					<a href="http://dribbble.com/jedmund" class="orange">Dribbble</a>
 				</div>
 
 				<!-- Features Bar -->
@@ -235,7 +239,7 @@
 			<div id="push"></div>
 		</div><!-- end content wrapper -->
 
-		<footer>
+		<footer class="bumper">
 			<div class="container_12">			
 				
 				<div class="grid_3" id="contact_us">
