--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 				speed: '10',
 				timeout:6000,
 				speed: 500,
-				next:'#hero .slideshow, #pager_next',
+				next:'#pager_next',
 				prev:'#pager_prev',
 				after: function() {
 					$('#byline .caption').text(this.alt);
