new hero stories

--- a/index.htm
+++ b/index.htm
@@ -144,8 +144,8 @@
 				<div class="container_12">
 					<figure class="grid_12" id="hero">
 						<div class="slideshow">
-							<img src="assets/img/content/piecesshow.jpg" alt="Seniors show final projects at Clearstory Creative.">
-							<img src="assets/img/content/colorcommunication.jpg" alt="Undergraduate students learn communication fundamentals.">
+							<img src="assets/img/content/confluence.jpg" alt="Leaders innovators in design attend Confluence.">
+							<img src="assets/img/content/plowitz.jpg" alt="Undergraduate's immersion into design's sketching culture.">
 						</div>
 					</figure>
 					
