Special Exhibition pages DONE with special cycle container

--- a/exhibition/index.htm
+++ b/exhibition/index.htm
@@ -190,7 +190,7 @@
 				<div id="exhibition">
 					<div class="container_12">
 						<a href="pieces/the_coop.htm">
-							<figure class="grid_12" id="hero">
+							<figure class="grid_12 hero_index" id="hero">
 								<img src="../assets/img/content/cooptoys3.png">
 								<figcaption class="byline">
 										<p class="left">
