Dont know what I changed. Probably small stuff.

--- a/index.htm
+++ b/index.htm
@@ -173,7 +173,9 @@
 								<a href="#">
 									<li class="grid_4 alpha">
 										<img src="assets/img/news/03_big.jpg">
-										<h4>The Future of eBooks</h4>
+										<h4>
+											<a href="#">The Future of eBooks</a>
+										</h4>
 										Guest author, senior Justin Edmund, analyzes the future of eBooks, the publishing industry, and the emerging tablet market.
 									</li>
 								</a>
@@ -191,7 +193,9 @@
 								<a href="#">
 									<li class="grid_4 omega">
 										<img src="assets/img/news/01_big.jpg">
-										<h4>What is Design?</h4>
+										<h4>
+											<a href="#">What is Design?</a>
+										</h4>
 										An animated crash course for our friends in other industries. Design is taking emerging importance, how can you get involved?
 									</li>
 								</a>
@@ -269,7 +273,7 @@
 									</span><br class="clear"><br>
 									<br>
 									<h3 class="frontpage">Student projects</h3>
-									<article class="alpha grid_4">
+									<aside class="alpha grid_4 project">
 										<a href="#">
 											<div>
 												<div class="overlay"></div>
@@ -277,8 +281,8 @@
 											</div>
 											<a href="#" class="orange">Kinetic Visualizer</a>
 										</a>
-									</article>
-									<article class="alpha grid_4">
+									</aside>
+									<aside class="alpha grid_4 project">
 										<a href="#">
 											<div>
 												<div class="overlay"></div>
@@ -286,7 +290,7 @@
 											</div>
 											<a href="#" class="orange">Rogue Eau De Parfum</a>
 										</a>
-									</article>
+									</aside>
 										
 								</div>
 								
