david profile pic

--- a/community/seniors.htm
+++ b/community/seniors.htm
@@ -755,7 +755,7 @@
 									<figure>
 										<a href="../community/davidyen.htm">
 											<div class="overlay"></div>
-											<img src="http://placehold.it/60x60/EFEFEF/EFEFEF">
+											<img src="../assets/img/undergraduates/yen.png">
 										</a>
 										<figcaption>
 											<span class="name">
