--- a/intranet/faculty/index2.htm
+++ b/intranet/faculty/index2.htm
@@ -24,7 +24,7 @@
 			<div class="center"><img src="../../assets/img/intranet_logo_large.png"></div>
 			
 			<form>
-				<input type="text" placeholder="Username"></input> 
+				<input type="text" placeholder="Andrew ID"></input> 
 				<input type="password" placeholder="Password"></input> 
 				<a href="index.htm" class="button">Sign in</a>
 			</form>
