Interaction Standard wireframe minis

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -108,6 +108,12 @@
 					
 					<section class="prefix_3 grid_9">
 						<h2 class="inside">Interaction Standards</h2>
+						<img alt="Header" src="../assets/img/guide/wf-header.png">
+						<img alt="Hero and Sidekick" src="../assets/img/guide/wf-hero.png">
+						<img alt="Features" src="../assets/img/guide/wf-features.png">
+						<img alt="Side Navigation" src="../assets/img/guide/wf-sidenav.png">
+						<img alt="Bottom Bar" src="../assets/img/guide/wf-bottom.png">
+						<img alt="Related Content" src="../assets/img/guide/wf-related.png">
 					</section>
 					
 					<section class="prefix_3 grid_9">
