Colors in Visual Standards

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -165,8 +165,20 @@
 						</div>
 					</section>
 					
-					<section class="prefix_3 grid_9">
+					<section class="prefix_3 grid_10">
 						<h2 class="inside">Visual Standards</h2>
+						<div class="colors">
+							<div class="color cmu-darkred"></div>
+							<div class="color cmu-red"></div>
+							<div class="color cmu-darkorange"></div>
+							<div class="color cmu-orange"></div>
+							<div class="color cmu-yellow"></div>
+							<div class="color cmu-white"></div>
+							<div class="color cmu-lightgray"></div>
+							<div class="color cmu-mediumgray"></div>
+							<div class="color cmu-darkgray"></div>
+							<hr style="width:100%; height:1px; border: 1px dotted #CCC; border-style: none none dotted; margin:0px; padding: 10px 0px 10px 0px;">
+						</div>
 					</section>
 					
 					<section class="prefix_3 grid_9">
