image added to guide

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -41,7 +41,7 @@
 				<div class="container_12">
 					<!-- The Sidekick -->
 					<figure class="grid_12" id="sidekick">
-						<img src="http://placehold.it/934x175/efefef/efefef" alt="Documentation">
+						<img src="../assets/img/content/mm_sidekick.png" alt="Documentation">
 					</figure>
 					
 					<div class="grid_12" id="section_header"></div>
