linking up architecture

--- a/support/index.htm
+++ b/support/index.htm
@@ -139,9 +139,9 @@
 					</div>
 					<div class="grid_3"><br>
 						<h4 class="inside">Related links</h4>
-						<a href="#" class="video"><img src="../assets/img/content/whatisdesign_alex.jpg"><br>
+						<a href="#" class="video"><img src="http://placehold.it/220x120/efefef/efefef"><br>
 						What is design?</a> Video feature<br><br>
-						<a href="#" class="video"><img src="../assets/img/content/dartemag.jpg"><br>
+						<a href="#" class="video"><img src="http://placehold.it/220x120/efefef/efefef"><br>
 						D'arte Magazine</a> Student project 
 					</div>
 				</div>
