more site architecture style

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -201,31 +201,31 @@
 									<li>
 										What is design?
 									</li>
-									<li class="quiet">
+									<li>
 										Design at CMU
 									</li>
-									<li class="quiet">
+									<li>
 										The Design Institute
 									</li>
-									<li class="quiet">
+									<li>
 										Features
 									</li class="quiet">
-									<li class="quiet">
+									<li>
 										Calendar
 									</li>
-									<li class="quiet">
+									<li>
 										Environment
 										<ul>
-											<li class="quiet">
+											<li>
 												Pittsburgh & CMU
 												<ul>
-													<li class="quiet">
+													<li>
 														What to do
 													</li>
-													<li class="quiet">
+													<li>
 														Where to stay
 													</li>
-													<li class="quiet">
+													<li>
 														Life on campus
 													</li>
 												</ul><!-- End pittsburgh&cmu -->
@@ -233,35 +233,35 @@
 											<li>
 												Facilities
 												<ul>
-													<li class="quiet">
+													<li>
 														Undergraduate studios
 													</li>
-													<li class="quiet">
+													<li>
 														Graduate studios
 													</li>
-													<li class="quiet">
+													<li>
 														3D Lab ("shop")
 													</li>
-													<li class="quiet">
+													<li>
 														Reese Cluster
 													</li>
-													<li class="quiet">
+													<li>
 														Smilie Lab
 													</li>
-													<li class="quiet">
+													<li>
 														Photo Facilities
 													</li>
-													<li class="quiet">
+													<li>
 														Letterpress Lab
 													</li>
-													<li class="quiet">
+													<li>
 														Other Campus Facilities
 													</li>
 												</ul><!-- End facilities -->
 											</li>
 										</ul><!-- End environment -->
 									</li>
-									<li class="quiet">
+									<li>
 										Contact
 									</li>
 								</ul>
@@ -270,25 +270,25 @@
 							<li>
 								<a href="../programs">Programs</a>
 								<ul>
-									<li class="quiet">
+									<li>
 										Precollege
 									</li>
 									<li>
 										Undergraduate
 										<ul>
-											<li class="quiet">
+											<li>
 												Foundation Year
 												<ul>
-													<li class="quiet">
+													<li>
 														Overview
 													</li>
-													<li class="quiet">
+													<li>
 														Courses
 													</li>
-													<li class="quiet">
+													<li>
 														Apply
 													</li>
-													<li class="quiet">
+													<li>
 														Exhibition
 													</li>
 												</ul><!-- End foundation year -->
@@ -299,63 +299,63 @@
 													<li>
 														Overview
 													</li>
-													<li class="quiet">
+													<li>
 														Courses
 													</li>
-													<li class="quiet">
+													<li>
 														Alumni/Careers
 													</li>
-													<li class="quiet">
+													<li>
 														Apply
 													</li>
-													<li class="quiet">
+													<li>
 														Exhibition
 													</li>
 												</ul><!-- End communication design -->
 											</li>
-											<li class="quiet">
+											<li>
 												Industrial Design
 												<ul>
-													<li class="quiet">
+													<li>
 														Overview
 													</li>
-													<li class="quiet">
+													<li>
 														Courses
 													</li>
-													<li class="quiet">
+													<li>
 														Alumni/Careers
 													</li>
-													<li class="quiet">
+													<li>
 														Apply
 													</li>
-													<li class="quiet">
+													<li>
 														Exhibition
 													</li>
 												</ul><!-- End industrial design -->
 											</li>
 										</ul><!-- End undergraduate -->
 									</li>
-									<li class="quiet">
+									<li>
 										Graduate
 										<ul>
-											<li class="quiet">
+											<li>
 												Interaction Design
 											</li>
-											<li class="quiet">
-												Communication Planning and Information Design
+											<li>
+												Communication Planning<br>& Information Design
 											</li>
-											<li class="quiet">
+											<li>
 												Master of Product Development
 											</li>
 										</ul><!-- End graduate -->
 									</li>
-									<li class="quiet">
+									<li>
 										PhD
 									</li>
-									<li class="quiet">
+									<li>
 										Continuing Education
 										<ul>
-											<li class="quiet">
+											<li>
 												Executive Education
 											</li>
 										</ul><!-- End continuing ed -->
@@ -369,13 +369,13 @@
 									<li>
 										<a href="../community/undergraduates.htm">Undergraduate students</a>
 										<ul>
-											<li class="quiet">
+											<li>
 												Freshmen
 											</li>
-											<li class="quiet">
+											<li>
 												Sophomores
 											</li>
-											<li class="quiet">
+											<li>
 												Juniors
 											</li>
 											<li>
@@ -383,54 +383,54 @@
 											</li>
 										</ul><!-- End undergraduate students -->
 									</li>
-									<li class="quiet">
+									<li>
 										Graduate students
 										<ul>
-											<li class="quiet">
+											<li>
 												Interaction Design
 											</li>
-											<li class="quiet">
-												Communication Planning and Information Design
+											<li>
+												Communication Planning<br>& Information Design
 											</li>
-											<li class="quiet">
+											<li>
 												Information Design
 											</li>
-											<li class="quiet">
+											<li>
 												Masters in Product Development
 											</li>
 										</ul><!-- End graduate students -->
 									</li>
-									<li class="quiet">
+									<li>
 										Alumni
 									</li>
-									<li class="quiet">
+									<li>
 										Faculty
 									</li>
-									<li class="quiet">
+									<li>
 										Nierenberg Chair
 									</li>
-									<li class="quiet">
+									<li>
 										Staff
 									</li>
-									<li class="quiet">
+									<li>
 										Visitors
 									</li>
 								</ul><!-- End community -->
 							</li>
 							
 							<li>
-								Exhibition
+								<a href="../exhibition">Exhibition</a>
 								<ul>
 									<li>
-										<a href="..//exhibition/pieces/the_coop.htm">Feature</a>
+										<a href="../exhibition/pieces/the_coop.htm">Feature</a>
 									</li>
-									<li class="quiet">
+									<li>
 										Freshmen
 									</li>
-									<li class="quiet">
+									<li>
 										Sophomore
 									</li>
-									<li class="quiet">
+									<li>
 										Junior
 										<ul>
 											<li>
@@ -443,13 +443,13 @@
 											</li>
 										</ul><!-- End junior -->
 									</li>
-									<li class="quiet">
+									<li>
 										Senior
 									</li>
-									<li class="quiet">
+									<li>
 										Elective
 									</li>
-									<li class="quiet">
+									<li>
 										Graduate
 									</li>
 								</ul><!-- End exhibition -->
@@ -461,43 +461,43 @@
 									<li>
 										Applying
 										<ul>
-											<li class="quiet">
+											<li>
 												Undergraduate
 												<ul>
-													<li class="quiet">
-														Overview/Deadlines
+													<li>
+														Overview
 													</li>
-													<li class="quiet">
+													<li>
 														Portfolio
 													</li>
-													<li class="quiet">
+													<li>
 														Contact
 													</li>
 												</ul><!-- End undergraduate -->
 											</li>
-											<li class="quiet">
+											<li>
 												Graduate
 												<ul>
-													<li class="quiet">
-														Overview/Deadlines
+													<li>
+														Overview
 													</li>
-													<li class="quiet">
+													<li>
 														Portfolio
 													</li>
-													<li class="quiet">
+													<li>
 														Contact
 													</li>
 												</ul><!-- End graduate -->
 											</li>
 										</ul><!-- End applying -->
 									</li>
-									<li class="quiet">
+									<li>
 										Visit
 									</li>
-									<li class="quiet">
+									<li>
 										Financial Aid
 									</li>
-									<li class="quiet">
+									<li>
 										FAQ
 									</li>
 								</ul><!-- End apply -->
@@ -511,7 +511,7 @@
 									<li>
 										Get involved
 									</li>
-									<li class="quiet">
+									<li>
 										Donate
 									</li>
 								</ul><!-- End support -->
