--- a/guide/index.htm
+++ b/guide/index.htm
@@ -197,12 +197,8 @@
 							<h5>This is an H5 style.</h5>	
 						</div>
 					</section>
-					
-					<section class="prefix_3 grid_9">
-						<h2 class="inside">Implementation Guidelines</h2>
-					</section>
-					
-					<section class="grid_12">
+
+					<section class="grid_12" id="architecture">
 						<h2 class="inside prefix_3">Functioning Pages</h2>
 						<ul id="site_architecture">
 							<li>
