--- a/guide/index.htm
+++ b/guide/index.htm
@@ -108,7 +108,7 @@
 					</section>
 					
 					<section class="prefix_3 grid_9" id="functionality">
-						<h2 class="inside">New Functionality</h2>
+						<h2 class="inside">Exhibition & Intranet</h2>
 						<img src="../assets/img/guide/gallery-diagram.png">
 						<div class="alpha grid_6">
 							<p>The Exhibition is our implementation of a Gallery. It is based around classes, and classes have projects which students do. All students are required in the curriculum to document their work digitally through the intranet, and then faculty and staff revise submissions before any work goes live.</p>
