--- a/guide/index.htm
+++ b/guide/index.htm
@@ -10,6 +10,8 @@
 		
 		<script type="text/javascript" src="../assets/js/jquery-1.5.min.js"></script> 
 		<script type="text/javascript" src="../assets/js/jquery.cycle.all.min.js"></script>
+		<script type="text/javascript" src="../assets/js/jquery.scrollto.js"></script>
+		<script type="text/javascript" src="../assets/js/jquery.localscroll.js"></script>
 		<script type="text/javascript" src="../assets/js/jquery.tipsy.js"></script>
 		
 		<script type="text/javascript">
