Added Typekit note

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -209,7 +209,7 @@
 							<h2>This is an H2 style.</h2>
 							<h3>This is an H3 style.</h3>
 							<h4>This is an H4 style.</h4>
-							<h5>This is an H5 style.</h5>	
+							<h5>We are using Meta from <a href="http://typekit.com/">Typekit</a>, a popular service that allows you to legally embed real typefaces in websites.</h5>	
 						</div>
 					</section>
 
