--- a/guide/index.htm
+++ b/guide/index.htm
@@ -86,6 +86,7 @@
 						<h2 class="inside">Overview</h2>
 						<p class="content">This page is documentation for the interaction prototype for a new School of Design <a href="../">website</a> and <a href="../intranet">intranet</a>. At the bottom of the page is a diagram of which pages are presently functional in this prototype.</p>
 						<p class="content">The intent of this page is to highlight insights that we learned over the course of a semester researching the school and its constituencies, as well as document the various interaction and visual standards that we established and our thought processes behind them.</p>
+						<p class="content">Please use Safari or Chrome for this prototype. We limited development to these browsers due to time-constraints.</p>
 					</section>
 					
 					<section class="prefix_3 grid_9" id="insights">
