--- a/guide/index.htm
+++ b/guide/index.htm
@@ -86,6 +86,7 @@
 						<h2 class="inside">Overview</h2>
 						<p class="content">This page is documentation for the interaction prototype for a new School of Design <a href="../">website</a> and <a href="../intranet">intranet</a>. At the bottom of the page is a diagram of which pages are presently functional in this prototype.</p>
 						<p class="content">The intent of this page is to highlight insights that we learned over the course of a semester researching the school and its constituencies, as well as document the various interaction and visual standards that we established and our thought processes behind them.</p>
+						<p class="content">Please use Safari or Chrome for this prototype. We limited development to these browsers due to time-constraints.</p>
 					</section>
 					
 					<section class="prefix_3 grid_9" id="insights">
@@ -128,7 +129,7 @@
 						<img src="../assets/img/guide/gallery-diagram.png">
 						<div class="alpha grid_6">
 							<p>The <a href="../exhibition" class="orange">Exhibition</a> is our implementation of a Gallery. It is based around classes and projects, with every student's work online. All students are required in the curriculum to document their work digitally on the intranet, and then faculty and staff revise submissions before any work goes live.</p>
-							<p>The public sees work from the past semester, allowing maintenance of the Exhibition to be completed anytime before the semester deadline. Internally, members of the School would be able to view the entire archive of work via the internet.</p>
+							<p>The public sees work from the past semester, allowing maintenance of the Exhibition to be completed anytime before the semester deadline. Internally, members of the School would be able to view the entire archive of work via the intranet.</p>
 							<p>The Exhibition also provides opportunities for students to have their work highlighted. Highlighted work appears in the heroes and sidekicks of exhibition pages. The front page of the Exhibition features one or a few exemplary projects. Class-level pages house one piece of work that represents the goals of that class, and likewise for project-level pages.</p><br>
 							<p>The <a href="../intranet" class="orange">Intranet</a> is designed to be nondisruptive with people's current habits and straightforward to implement and adopt. The Presto printing service (<a href="http://pit.design.cmu.edu" class="orange">pit.design.cmu.edu</a>) is folded into the Intranet, with the potential to house future services. Students can manage their projects and online profile, while teachers can collect their students' project documentation.</p>
 						</div>
