linked up all pages

--- a/guide/index.htm
+++ b/guide/index.htm
@@ -425,7 +425,7 @@
 										Alumni
 									</li>
 									<li>
-										Faculty
+										<a href="../community/faculty.htm">Faculty</a>
 									</li>
 									<li>
 										Nierenberg Chair
