--- a/intranet/faculty/prints.htm
+++ b/intranet/faculty/prints.htm
@@ -65,10 +65,10 @@
 									</a>
 									<ul class="hover_nav">
 										<li>
-											<a href="#">Profile</a>
+											<a href="profile.htm">Profile</a>
 										</li>
 										<li>
-											<a href="#">My Account</a>
+											<a href="profile.htm">My Account</a>
 										</li>
 										<li>
 											<a href="index2.htm">Logout</a>
