Oops, fixed last commit

--- a/index.htm
+++ b/index.htm
@@ -13,16 +13,16 @@
 		<script type="text/javascript" src="assets/js/jquery.cycle.all.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
-			$('404.htmhero .slideshow').cycle({
+			$('#hero .slideshow').cycle({
 				fx: 'scrollHorz',
 				speed: '10',
 				timeout:6000,
 				speed: 500,
-				next:'404.htmpager_next',
-				prev:'404.htmpager_prev',
+				next:'#pager_next',
+				prev:'#pager_prev',
 				pause: 1,
 				after: function() {
-					$('404.htmbyline .caption').text(this.alt);
+					$('#byline .caption').text(this.alt);
 				}
 			});
 	
@@ -338,12 +338,12 @@
 					</a>
 					
 					<span class="tweet">
-						<p>404.htmThackara grabbed them deeply last night at CMU design, well challenged to find a restorative economy in PGH</p>
+						<p>#Thackara grabbed them deeply last night at CMU design, well challenged to find a restorative economy in PGH</p>
 						<span class="tweets_timestamp">April 22</span><br><br>
 					</span>
 					
 					<span class="tweet">
-						<p>If you missed Arnold Wasserman's lecture, it will be available soon for online viewing. http://bit.ly/hxcl5R 404.htmcmudesignthefuture</p>
+						<p>If you missed Arnold Wasserman's lecture, it will be available soon for online viewing. http://bit.ly/hxcl5R #cmudesignthefuture</p>
 						<span class="tweets_timestamp">April 21</span><br><br>
 					</span>
 				</div>
