approved indicator on project page, intranet

--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -86,7 +86,8 @@
 							</span>
 							<hr>
 							<img src="../assets/img/content/nobiradio.jpg" width="300px;">
-							<a href="#" class="intranet">Change thumbnail</a>
+							<a href="#" class="intranet">Change thumbnail</a><br><br>
+							<span id="indicator">&bull;</span><span id="savetext">Last edit (4 days ago) approved</span>
 						</div>
 					</div>
 					<div class="grid_7 omega">
