--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -16,22 +16,22 @@
 						</a>
 						<ul class="hover_nav">
 							<li>
-								<a href="school/index.htm">What is Design?</a>
+								<a href="school/">What is Design?</a>
 							</li>
 							<li>
-								<a href="school/index.htm">Design at CMU</a>
+								<a href="school/">Design at CMU</a>
 							</li>
 							<li>
-								<a href="school/index.htm">Design Institute</a>
+								<a href="school/">Design Institute</a>
 							</li>
 							<li>
-								<a href="school/index.htm">Features</a>
+								<a href="school/">Features</a>
 							</li>
 							<li>
-								<a href="school/index.htm">Environment</a>
+								<a href="school/">Environment</a>
 							</li>
 							<li>
-								<a href="school/index">Contact</a>
+								<a href="school/">Contact</a>
 							</li>
 						</ul>
 					</li>
