Revert f3673865146e1ee2827371d3cd8bf3d3301958de^..HEAD

--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -16,22 +16,22 @@
 						</a>
 						<ul class="hover_nav">
 							<li>
-								<a href="school/">What is Design?</a>
+								<a href="/school_of_design/school/">What is Design?</a>
 							</li>
 							<li>
-								<a href="school/">Design at CMU</a>
+								<a href="/school_of_design/school/">Design at CMU</a>
 							</li>
 							<li>
-								<a href="school/">Design Institute</a>
+								<a href="/school_of_design/school/">Design Institute</a>
 							</li>
 							<li>
-								<a href="school/">Features</a>
+								<a href="/school_of_design/school/">Features</a>
 							</li>
 							<li>
-								<a href="school/">Environment</a>
+								<a href="/school_of_design/school/">Environment</a>
 							</li>
 							<li>
-								<a href="school/">Contact</a>
+								<a href="/school_of_design/school/">Contact</a>
 							</li>
 						</ul>
 					</li>
