--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -11,7 +11,7 @@
 			<nav id="global">
 				<ul>
 					<li>
-						<a href="school">
+						<a href="/school_of_design/school/">
 							<span>School</span>
 						</a>
 						<ul class="hover_nav">
