Implemented XML trees for side navigation lists. Other assorted changes.

--- a/assets/html/school.what_is_design.html
+++ b/assets/html/school.what_is_design.html
@@ -13,17 +13,7 @@
   		<span class="breadcrumb">School / What is Design</span>
   	</div>
   	
-  	<div id="side_nav" class="grid_3">
-  		<ul>
-  			<a href="#"><li class="selected">What is Design?</li></a>
-  			<a href="#"><li>About the School</li></a>
-  			<a href="#"><li>The Design Institute</li></a>
-  			<a href="#"><li>Features</li></a>
-  			<a href="#"><li>Calendar</li></a>
-  			<a href="#"><li>Environment</li></a>
-  			<a href="#"><li>Contact</li></a>
-  		</ul>
-  	</div>
+  	{% include 'interface.sidenav.html' %}
   	
   	<div class="grid_6">
   		<h2 class="inside">The Power and Potential of Design</h2>
