File structure, hooked up bottom bar interface element to the XML system.

--- a/assets/html/school.what_is_design.html
+++ b/assets/html/school.what_is_design.html
@@ -97,14 +97,9 @@
   			<p class="alpha grid_9 content">At Carnegie Mellon's School of Design, we believe that design is a <em>humanistic discipline</em> that involves initiating, planning, and shaping products, communications, ideas, and services within continually changing social, environmental, and economic landscapes. We look to <em>living systems</em> to help fashion a responsible approach that values the quality of human life in balance with a healthy and <em>sustainable planet</em>. Our process employs <em>human-centered methods</em> that synthesize traditional approaches with technological innovations to meet human needs. The School of Design prepares students to become <em>catalysts for innovation and social change</em> by drawing from the interdisciplinary strengths of the liberal arts and the scientific and creative disciplines, and facilitating <em>transdisciplinary</em> collaborative problem solving.</p>
   		</section>
   	</div>
-  	
-  	<nav class="grid_12" id="bottom">
-  		<a href="#">
-  			<span id="older">
-  				<span>Read more about our school</span>
-  			  <span>&rarr;</span>
-  			</span>
-  		</a>
-  	</nav>
+    
+    {% include 'interface.bottombar.html' %}  	
   </div>
 {% endblock %}
+
+{% block pushfix %}{% endblock %}
